--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,113 @@
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding-top: 3rem;
-}
-
 h1 {
   text-align: center;
+}
+
+.table-wrapper {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  background-color: #fa9191;
+  padding: 0 20px 0 0;
+  width: 100%;
+}
+
+#body-wrapper {
+  overflow: hidden;
+}
+
+#page {
+  width: 1020px;
+  max-width: 1020px;
+  background-color: #f2f2f2;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 980px;
+}
+
+#main {
+  display: inline-block;
+  width: 1020px;
+  padding-top: 0px;
+  position: relative;
+}
+
+#content {
+  min-height: 400px;
+}
+
+.card-line .week-name {
+  display: table;
+  color: #fff;
+  padding: 0 0.1%;
+  position: relative;
+  font-size: 16px;
+  width: 24px;
+  font-weight: bold;
+  float: left;
+  height: 100%;
+  min-width: 30px;
+}
+
+#time {
+  padding-left: 30px;
+  width: 100%;
+}
+
+#time div {
+  color: #fff;
+  padding: 3px 0;
+  font-size: 14px;
+  text-align: center;
+  float: left;
+  margin-right: 2px;
+  width: 14%;
+}
+
+#schedule_main {
+  position: relative;
+  overflow: hidden;
+  clear: both;
+  margin-bottom: 40px;
+}
+
+.table-wrapper .card-line .week-name label {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  position: absolute;
+  top: 39%;
+}
+
+.table-wrapper .card-line .lessons_cel .all_lessons_info {
+  position: relative;
+  height: 100%;
+}
+
+.table-wrapper .card-line .lessons_cell {
+  background-color: #ffe9c5;
+  border-radius: 2px;
+  position: relative;
+  float: left;
+  transition: background-color 0.5s;
+  cursor: pointer;
+  margin-right: 2px;
+  height: 100%;
+  width: 13.6%;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+.end-card {
+  margin: 0 !important;
+}
+
+.card-line {
+  height: 82px;
+}
+
+.clear {
+  clear: both;
 }
