--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,50 +2,17 @@ h1 {
   text-align: center;
 }
 
-.table-wrapper {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  background-color: #fa9191;
-  padding: 0 20px 0 0;
-  width: 100%;
+.page-wrappper {
+  width: 920px;
+  height: auto;
+  margin: 0 auto;
 }
 
-#body-wrapper {
-  overflow: hidden;
-}
-
-#page {
-  width: 1020px;
-  max-width: 1020px;
-  background-color: #f2f2f2;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 980px;
-}
-
-#main {
-  display: inline-block;
-  width: 1020px;
-  padding-top: 0px;
-  position: relative;
-}
-
-#content {
-  min-height: 400px;
-}
-
-.card-line .week-name {
-  display: table;
-  color: #fff;
-  padding: 0 0.1%;
-  position: relative;
-  font-size: 16px;
-  width: 24px;
-  font-weight: bold;
-  float: left;
+.table {
   height: 100%;
-  min-width: 30px;
+  width: 100%;
+  background-color: #ffe9c5;
+  padding: 4px;
 }
 
 #time {
@@ -54,60 +21,167 @@ h1 {
 }
 
 #time div {
-  color: #fff;
-  padding: 3px 0;
+  color: red;
   font-size: 14px;
   text-align: center;
   float: left;
   margin-right: 2px;
-  width: 14%;
-}
-
-#schedule_main {
-  position: relative;
-  overflow: hidden;
-  clear: both;
-  margin-bottom: 40px;
-}
-
-.table-wrapper .card-line .week-name label {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  position: absolute;
-  top: 39%;
-}
-
-.table-wrapper .card-line .lessons_cel .all_lessons_info {
-  position: relative;
-  height: 100%;
-}
-
-.table-wrapper .card-line .lessons_cell {
-  background-color: #ffe9c5;
-  border-radius: 2px;
-  position: relative;
-  float: left;
-  transition: background-color 0.5s;
-  cursor: pointer;
-  margin-right: 2px;
-  height: 100%;
-  width: 13.6%;
-}
-
-label {
-  display: block;
-  font-weight: bold;
-}
-
-.end-card {
-  margin: 0 !important;
-}
-
-.card-line {
-  height: 82px;
+  width: 120px;
 }
 
 .clear {
   clear: both;
 }
+
+.week-line {
+  height: auto;
+  margin-bottom: 2px;
+}
+
+.week-line .week-name {
+  display: table;
+  color: red;
+  position: relative;
+  font-size: 16px;
+  width: 30px;
+  font-weight: bold;
+  float: left;
+  height: 100%;
+  min-width: 30px;
+  padding-right: 5px;
+}
+
+.week-line .week-name label {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.cell {
+  display: table;
+  width: 120px;
+  margin-right: 2px;
+
+  border-radius: 2px;
+  position: relative;
+  float: left;
+  transition: background-color 0.5s;
+  cursor: pointer;
+  height: 100%;
+}
+
+.lesson {
+  display: table-cell;
+  background-color: #fa9191;
+  height: 100%;
+}
+
+// #table-wrapper {
+//   box-sizing: border-box;
+//   -moz-box-sizing: border-box;
+//   background-color: #fa9191;
+//   padding: 0 20px 0 0;
+//   width: 100%;
+// }
+
+// #page {
+//   width: 1020px;
+//   max-width: 1020px;
+//   background-color: #f2f2f2;
+//   position: relative;
+//   margin-left: auto;
+//   margin-right: auto;
+//   max-width: 980px;
+// }
+
+// #main {
+//   display: inline-block;
+//   width: 1020px;
+//   padding-top: 0px;
+//   position: relative;
+// }
+
+// #content {
+//   min-height: 400px;
+// }
+
+// .card-line .week-name {
+//   display: table;
+//   color: #fff;
+//   padding: 0 2px;
+//   position: relative;
+//   font-size: 16px;
+//   width: 24px;
+//   font-weight: bold;
+//   float: left;
+//   height: 100%;
+//   min-width: 30px;
+// }
+
+// #time {
+//   padding-left: 30px;
+//   width: 100%;
+// }
+
+// #time div {
+//   color: #fff;
+//   padding: 3px 0;
+//   font-size: 14px;
+//   text-align: center;
+//   float: left;
+//   margin-right: 2px;
+//   width: 14%;
+// }
+
+// #schedule_main {
+//   position: relative;
+//   overflow: hidden;
+//   clear: both;
+//   margin-bottom: 40px;
+// }
+
+// #table-wrapper .card-line {
+//   margin-bottom: 2px;
+// }
+
+// .table-wrapper .card-line .week-name label {
+//   display: table-cell;
+//   vertical-align: middle;
+//   text-align: center;
+//   position: absolute;
+//   top: 39%;
+// }
+
+// .table-wrapper .card-line .lessons_cel .all_lessons_info {
+//   position: relative;
+//   height: 100%;
+// }
+
+// .table-wrapper .card-line .lessons_cell {
+//   background-color: #ffe9c5;
+//   border-radius: 2px;
+//   position: relative;
+//   float: left;
+//   transition: background-color 0.5s;
+//   cursor: pointer;
+//   margin-right: 2px;
+//   height: 100%;
+//   width: 133px;
+// }
+
+// label {
+//   display: block;
+//   font-weight: bold;
+// }
+
+// .end-card {
+//   margin: 0 !important;
+// }
+
+// .card-line {
+//   height: 82px;
+// }
+
+// .clear {
+//   clear: both;
+// }
