--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -13,12 +13,12 @@
     cursor: pointer;
     margin-right: 2px;
     height: 100%;
-    width: 13.6%;
+    width: 133px;
   }
 
   label {
-    height: 60px;
-    max-height: 60px;
+    height: 82px;
+    max-height: 82px;
   }
 
   .auditories {
