--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
-<h1>Люблю свою работу</h1>
+<div class="container">
+  <h1>Люблю свою работу</h1>
+  <header>
+    <app-selector></app-selector>
+  </header>
+  <main>
+    <app-schedule></app-schedule>
+  </main>
+</div>
 
-<div class="page-wrappper">
+
+
+<!-- <div class="page-wrappper">
   <div class="table">
     <div id="time">
       <div><span>8:45 - 10:20</span></div>
@@ -11,7 +21,49 @@
       <div><span>18:25 - 20:00</span></div>
       <div class="end-card"><span>20:15 - 21:50</span></div>
     </div>
-    <div class="clear"></div>
+    <div class="week-line">
+      <div class="week-name">ПН</div>
+      <div class="cell">
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+        </div>
+      </div>
+    </div>
+
     <div class="week-line">
       <div class="week-name"><label>ПН</label></div>
       <div class="cell">
@@ -28,8 +80,6 @@
         <div class="lesson">
           Lorem ipsum dolor sit amet.
         </div>
-      </div>
-      <div class="cell">
         <div class="lesson">
           Lorem ipsum dolor sit amet.
         </div>
@@ -42,6 +92,10 @@
       <div class="cell">
         <div class="lesson">
           Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
         </div>
       </div>
       <div class="cell">
@@ -50,9 +104,19 @@
         </div>
       </div>
     </div>
-
+    <div class="week-line">
+      <div class="week-name"><label>ПН</label></div>
+      <div class="cell">
+        <div class="lesson"></div>
+      </div>
+      <div class="cell">
+        <div class="lesson">
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</div> -->
 
 
 
