--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,187 +1,81 @@
+header {
+  padding: 1rem 2rem;
+}
+
 h1 {
   text-align: center;
 }
 
-.page-wrappper {
-  width: 920px;
-  height: auto;
-  margin: 0 auto;
-}
-
-.table {
-  height: 100%;
-  width: 100%;
-  background-color: #ffe9c5;
-  padding: 4px;
-}
-
-#time {
-  padding-left: 30px;
-  width: 100%;
-}
-
-#time div {
-  color: red;
-  font-size: 14px;
-  text-align: center;
-  float: left;
-  margin-right: 2px;
-  width: 120px;
-}
-
-.clear {
-  clear: both;
-}
-
-.week-line {
-  height: auto;
-  margin-bottom: 2px;
-}
-
-.week-line .week-name {
-  display: table;
-  color: red;
-  position: relative;
-  font-size: 16px;
-  width: 30px;
-  font-weight: bold;
-  float: left;
-  height: 100%;
-  min-width: 30px;
-  padding-right: 5px;
-}
-
-.week-line .week-name label {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-}
-
-.cell {
-  display: table;
-  width: 120px;
-  margin-right: 2px;
-
-  border-radius: 2px;
-  position: relative;
-  float: left;
-  transition: background-color 0.5s;
-  cursor: pointer;
-  height: 100%;
-}
-
-.lesson {
-  display: table-cell;
-  background-color: #fa9191;
-  height: 100%;
-}
-
-// #table-wrapper {
-//   box-sizing: border-box;
-//   -moz-box-sizing: border-box;
-//   background-color: #fa9191;
-//   padding: 0 20px 0 0;
-//   width: 100%;
+// .page-wrappper {
+//   width: 920px;
+//   height: auto;
+//   margin: 0 auto;
 // }
 
-// #page {
-//   width: 1020px;
-//   max-width: 1020px;
-//   background-color: #f2f2f2;
-//   position: relative;
-//   margin-left: auto;
-//   margin-right: auto;
-//   max-width: 980px;
-// }
-
-// #main {
-//   display: inline-block;
-//   width: 1020px;
-//   padding-top: 0px;
-//   position: relative;
-// }
-
-// #content {
-//   min-height: 400px;
-// }
-
-// .card-line .week-name {
-//   display: table;
-//   color: #fff;
-//   padding: 0 2px;
-//   position: relative;
-//   font-size: 16px;
-//   width: 24px;
-//   font-weight: bold;
-//   float: left;
+// .table {
 //   height: 100%;
-//   min-width: 30px;
+//   width: 100%;
+//   background-color: #ffe9c5;
+//   padding: 4px;
 // }
 
 // #time {
-//   padding-left: 30px;
+//   margin-left: 36px;
 //   width: 100%;
 // }
 
 // #time div {
-//   color: #fff;
-//   padding: 3px 0;
+//   color: red;
 //   font-size: 14px;
 //   text-align: center;
 //   float: left;
 //   margin-right: 2px;
-//   width: 14%;
+//   width: 120px;
 // }
 
-// #schedule_main {
-//   position: relative;
-//   overflow: hidden;
+// .clear {
 //   clear: both;
-//   margin-bottom: 40px;
 // }
 
-// #table-wrapper .card-line {
-//   margin-bottom: 2px;
+// .week-line {
+//   height: auto;
+//   display: table;
 // }
 
-// .table-wrapper .card-line .week-name label {
+// .week-line .week-name {
+//   display: table;
+//   color: red;
+//   position: relative;
+//   font-size: 16px;
+//   width: 30px;
+//   font-weight: bold;
+//   float: left;
+//   height: 100%;
+//   min-width: 30px;
+//   padding-right: 5px;
+// }
+
+// .week-line .week-name label {
 //   display: table-cell;
 //   vertical-align: middle;
 //   text-align: center;
-//   position: absolute;
-//   top: 39%;
 // }
 
-// .table-wrapper .card-line .lessons_cel .all_lessons_info {
-//   position: relative;
-//   height: 100%;
-// }
-
-// .table-wrapper .card-line .lessons_cell {
-//   background-color: #ffe9c5;
+// .cell {
+//   display: table;
+//   width: 120px;
+//   margin-right: 2px;
 //   border-radius: 2px;
 //   position: relative;
 //   float: left;
 //   transition: background-color 0.5s;
 //   cursor: pointer;
-//   margin-right: 2px;
 //   height: 100%;
-//   width: 133px;
 // }
 
-// label {
+// .lesson {
 //   display: block;
-//   font-weight: bold;
-// }
-
-// .end-card {
-//   margin: 0 !important;
-// }
-
-// .card-line {
-//   height: 82px;
-// }
-
-// .clear {
-//   clear: both;
+//   background-color: #fa9191;
+//   height: 100%;
+//   margin-bottom: 2px;
 // }
