Done with table, cells and adding lessons to schedule

--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -5,11 +5,11 @@
                 <span>{{lessonsTime[i]}}</span>
             </div>
         </div>
-        <div class="week-line" *ngFor="let weekLine of schedule; let i = index">
-            <div class="week-name"><label>{{weekNames[i]}}</label></div>
-            <div class="cell" *ngFor="let cell of weekLine.weekLines">
-                <div class="lesson" *ngFor="let lesson of cell.cells">
-                    {{lesson.title}}
+        <div class="week-line" *ngFor="let weekLine of schedule; let lineIndex = index">
+            <div class="week-name"><label>{{weekNames[lineIndex]}}</label></div>
+            <div class="cell" *ngFor="let cell of weekLine.weekLines; let cellIndex=index">
+                <div class="lesson" *ngFor="let lesson of cell.cells; let lessonIndex = index">
+                    <app-lesson class="inner-lesson" [lesson]="lesson"></app-lesson>
                 </div>
             </div>
         </div>
