Updated auth and pages with login

--- a/src/app/for-students/for-students.component.html
+++ b/src/app/for-students/for-students.component.html
@@ -1,6 +1,10 @@
 <div class="container">
-    <h1>Люблю свою работу</h1>
-    <button routerLink="/home">На главную</button>
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center mb-3">
+            <h1>Люблю свою работу</h1>
+            <button class="btn btn-primary" routerLink="/home">На главную</button>
+        </div>
+    </div>
     <header>
         <app-selector></app-selector>
     </header>
