--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,8 @@
-<button routerLink="/for-students">Для студентов</button>
-<button routerLink="/for-teachers">Для учителей</button>
+<div class="row p-5">
+    <div class="col-md-6 offset-md-3 mt-4 text-center">
+        <h2>Тупо расписание</h2>
+        <button class="btn btn-primary mr-3" routerLink="/for-students">Для бандитов</button>
+        <button class="btn btn-primary mr-3" routerLink="/for-teachers">Для бати</button>
+        <button class="btn btn-primary mr-3" routerLink="/login">Заходи, не стесняйся</button>
+    </div>
+</div>
