Done with registration page, implemented sesuccessful post request to backend

--- a/src/app/for-students/for-students.component.html
+++ b/src/app/for-students/for-students.component.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="cont">
     <div class="row">
-        <div class="col-md-6 offset-md-3 text-center mb-3">
-            <h1>Люблю свою работу</h1>
+        <div class="col s12 center-align">
+            <h3>Люблю свою работу</h3>
             <button class="btn btn-primary" routerLink="/home">На главную</button>
         </div>
     </div>
-    <header>
+    <header style="margin-bottom: 2rem;">
         <app-selector></app-selector>
     </header>
     <main>
