--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="row p-5">
-    <div class="col-md-6 offset-md-3 mt-4 text-center">
+<div class="row to-center">
+    <div class="col s6 offset-s3 center-align">
         <h2>Тупо расписание</h2>
-        <button class="btn btn-primary mr-3" routerLink="/for-students">Для бандитов</button>
-        <button class="btn btn-primary mr-3" routerLink="/for-teachers">Для бати</button>
-        <button class="btn btn-primary mr-3" routerLink="/login">Заходи, не стесняйся</button>
+        <button class="btn btn-primary btn-margins" routerLink="/for-students">Для бандитов</button>
+        <button class="btn btn-primary btn-margins" routerLink="/for-teachers">Для бати</button>
+        <button class="btn btn-primary btn-margins" routerLink="/login">Login/register</button>
     </div>
 </div>
