--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row p-5 justify-content-center">
     <div class="col-md-6 mt-4">
-        <h3>Login</h3>
+        <h3>Login&</h3>
         <form>
             <div class="form-group">
                 <label for="inputEmail">Ваша почта</label>
