--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,33 @@ body {
   color: #333;
 }
 
+div.sm-jumbotron {
+  margin: 0px;
+  margin-bottom: 2rem;
+  padding: 2rem;
+}
+
+button.btn-submit {
+  width: 100%;
+}
+
+.btn-margins {
+  margin: 0 0.5rem;
+}
+
+.to-center {
+  margin-top: 10rem;
+}
+
+// input.ng-invalid.ng-dirty {
+//   border-bottom-color: #e91e63 !important;
+//   box-shadow: 0 1px 0 #e91e63 !important;
+// }
+
+label {
+  pointer-events: none;
+}
+
 // a {
 //   color: var(--primary-color);
 //   text-decoration: none;
@@ -44,7 +71,7 @@ ul {
 //   margin-bottom: 0.5rem;
 // }
 
-.container {
+.cont {
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
