--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@ button.btn-submit {
 //   box-shadow: 0 1px 0 #e91e63 !important;
 // }
 
-label {
+.label-no-click {
   pointer-events: none;
 }
 
