Done with basic admin page and with Building CRUD

--- a/src/app/for-students/for-students.component.html
+++ b/src/app/for-students/for-students.component.html
@@ -1,14 +1,14 @@
 <div class="cont">
-    <div class="row">
-        <div class="col s12 center-align">
-            <h3>Люблю свою работу</h3>
-            <button class="btn btn-primary" routerLink="/home">На главную</button>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-md-12 text-center">
+      <h3>Люблю свою работу</h3>
+      <button class="btn btn-primary" routerLink="/home">На главную</button>
     </div>
-    <header style="margin-bottom: 2rem;">
-        <app-selector></app-selector>
-    </header>
-    <main>
-        <app-schedule></app-schedule>
-    </main>
+  </div>
+  <header style="margin-bottom: 2rem;">
+    <app-selector></app-selector>
+  </header>
+  <main>
+    <app-schedule></app-schedule>
+  </main>
 </div>
