--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,17 @@
-<div class="row to-center">
-    <div class="col s6 offset-s3 center-align">
-        <h2>Тупо расписание</h2>
-        <button class="btn btn-primary btn-margins" routerLink="/for-students">Для бандитов</button>
-        <button class="btn btn-primary btn-margins" routerLink="/for-teachers">Для бати</button>
-        <button class="btn btn-primary btn-margins" routerLink="/login">Login/register</button>
-    </div>
+<div class="row text-center">
+  <div class="col-md-6 offset-md-3">
+    <h2>Тупо расписание</h2>
+    <button class="btn btn-primary btn-margins mr-3" routerLink="/for-students">
+      Для бандитов
+    </button>
+    <button class="btn btn-primary btn-margins mr-3" routerLink="/for-teachers">
+      Для бати
+    </button>
+    <button class="btn btn-primary btn-margins mr-3" routerLink="/for-admin">
+      Админка
+    </button>
+    <button class="btn btn-primary btn-margins mr-3" routerLink="/login">
+      Регистрация
+    </button>
+  </div>
 </div>
