Done with CRUD subject

--- a/src/app/for-admin/for-admin.component.html
+++ b/src/app/for-admin/for-admin.component.html
@@ -4,7 +4,7 @@
       <button class="btn btn-primary mb-1 w-100">Факультеты</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./buildings">Корпуса</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./audiences">Аудитории</button>
-      <button class="btn btn-primary mb-1 w-100">Предметы</button>
+      <button class="btn btn-primary mb-1 w-100" routerLink="./subjects">Предметы</button>
       <button class="btn btn-primary mb-1 w-100">Типы занятий</button>
       <button class="btn btn-primary mb-1 w-100">Группы</button>
       <button class="btn btn-primary mb-1 w-100">Преподаватели</button>
