--- a/src/app/for-admin/subjects/subjects.component.html
+++ b/src/app/for-admin/subjects/subjects.component.html
@@ -9,7 +9,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="modalUpdateTitle">
-                                {{forEdit ? 'Редактировать выбранный корпус' : 'Создать новый корпус'}}</h5>
+                                {{forEdit ? 'Редактировать выбранный предмет' : 'Создать новый предмет'}}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close" #closebutton
                                 (click)="this.createForm.reset();">
                                 <span aria-hidden="true">&times;</span>
@@ -18,24 +18,13 @@
                         <div class="modal-body">
                             <form #createForm="ngForm">
                                 <div class="form-group">
-                                    <label for="buildingTitleInput">Название корпуса</label>
+                                    <label for="buildingTitleInput">Название предмета</label>
                                     <input type="text" [(ngModel)]="titleText" class="form-control" name="title"
-                                        id="buildingTitleInput" placeholder="Enter building title" #title="ngModel"
+                                        id="subjectTitleInput" placeholder="Enter subject title" #title="ngModel"
                                         required>
                                     <div *ngIf="title.errors && (title.dirty || title.touched)">
                                         <div [hidden]="!title.errors.required">
                                             <p class="m-1" style="color:brown">Поле название - обязательное!</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="buildingAddressInput">Адрес</label>
-                                    <input type="text" [(ngModel)]="addressText" class="form-control" name="address"
-                                        #address="ngModel" id="buildingAddressInput"
-                                        placeholder="Enter building address" required>
-                                    <div *ngIf="address.errors && (address.dirty || address.touched)">
-                                        <div [hidden]="!address.errors.required">
-                                            <p class="m-1" style="color:brown">Поле адрес - обязательное!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -45,7 +34,7 @@
                                     <button type="button" class="btn btn-primary" data-dismiss="modal"
                                         [disabled]="createForm.form.invalid"
                                         (click)="
-                                        updateBuilding(); createForm.reset();">{{forEdit ? 'Обновить' : 'Создать'}}</button>
+                                        updatesubject(); createForm.reset();">{{forEdit ? 'Обновить' : 'Создать'}}</button>
                                 </div>
                             </form>
                         </div>
@@ -54,35 +43,30 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <h5>Название корпуса</h5>
-                </div>
-                <div class="col-md-3">
-                    <h5>Адрес</h5>
+                    <h5>Название предмета</h5>
                 </div>
                 <div class="col-md-6">
                     <h5>Действия</h5>
                 </div>
             </div>
             <hr>
-            <div *ngFor="let building of buildings; let i = index">
+            <div *ngFor="let subject of subjects; let i = index">
                 <div class="row">
                     <div class="col-md-3 content">
-                        {{building.title}}
-                    </div>
-                    <div class="col-md-3 content">
-                        {{building.address}}
+                        {{subject.title}}
                     </div>
                     <div class="col-md-6">
                         <button class="btn btn-link mr-3 p-0" data-toggle="modal" data-target="#modalUpdate"
-                            (click)="openModal(true); openModalForEditing(building)">Редактировать</button>
+                            (click)="openModal(true); openModalForEditing(subject)">Редактировать</button>
                         <button class="btn btn-link p-0" data-toggle="modal" data-target="#modalDelete"
-                            (click)="openModalForDelete(building)">Удалить</button>
+                            (click)="openModalForDelete(subject)">Удалить</button>
                         <div class="modal fade" id="modalDelete" tabindex="-1" role="dialog"
                             aria-labelledby="modalDelete" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLongTitle">Удалить выбранный корпус</h5>
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Удалить выбранный предмет?
+                                        </h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                                             #closebuttonDelete>
                                             <span aria-hidden="true">&times;</span>
@@ -95,7 +79,7 @@
                                         <button type="button" class="btn btn-secondary"
                                             data-dismiss="modal">Нет</button>
                                         <button type="button" class="btn btn-danger"
-                                            (click)="deleteBuilding(building.id)">Да</button>
+                                            (click)="deletesubject(subject.id)">Да</button>
                                     </div>
                                 </div>
                             </div>
