Done with CRUD faculty

--- a/src/app/for-admin/for-admin.component.html
+++ b/src/app/for-admin/for-admin.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-2">
-      <button class="btn btn-primary mb-1 w-100">Факультеты</button>
+      <button class="btn btn-primary mb-1 w-100" routerLink="./faculties">Факультеты</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./buildings">Корпуса</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./audiences">Аудитории</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./subjects">Предметы</button>
