Done with CRUD teacher and fixed others
Fixed some functions in CRUD subjects, buildings, faculties and audience. Just in delete by id

--- a/src/app/for-admin/for-admin.component.html
+++ b/src/app/for-admin/for-admin.component.html
@@ -7,7 +7,7 @@
       <button class="btn btn-primary mb-1 w-100" routerLink="./subjects">Предметы</button>
       <button class="btn btn-primary mb-1 w-100">Типы занятий</button>
       <button class="btn btn-primary mb-1 w-100">Группы</button>
-      <button class="btn btn-primary mb-1 w-100">Преподаватели</button>
+      <button class="btn btn-primary mb-1 w-100" routerLink="./teachers">Преподаватели</button>
       <button class="btn btn-primary mb-1 w-100">Дисциплины преподавателей</button>
       <button class="btn btn-primary mb-1 w-100">Пользователи</button>
       <button class="btn btn-success mb-1 w-100" routerLink="/home">На главную</button>
